correcoes nos requesitos bonus

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1>Lessons Learned - Trybe!</h1>
+        <h1 id="titulo">Lessons Learned - Trybe!</h1>
     </header>
     <nav class="horizontal-nav-bar">
         <ul>
@@ -23,15 +23,14 @@
         <div class="center-photo-name">
             <section class="photo-name">
                 <img id="minha_foto" src="images/me.jpg" alt="minha foto">
-                <h1 id="titulo"> <a target="_blank" href="https://www.linkedin.com/in/marcelo-campos-3a13441bb/">Marcelo Campos</a></h1>
+                <h1> <a target="_blank" href="https://www.linkedin.com/in/marcelo-campos-3a13441bb/">Marcelo Campos</a></h1>
             </section>
         </div>
         <div class="article-box">
-            <section id="article1">
-                <article>
-                    <p>Estou a poucas semanas na Trybe, mas sinto que meu aprendizado tem sido tão abrangente quanto meses de estudo. A metodologia de aprendizado ativa tem sido árdua e intensa, tem me deixado estressado e muito cansado, porém com o passar dos dias, me comparando com o Marcelo la dos welcome days, já vejo uma enorme diferença e me sinto muito orgulhoso de fazer parte da Trybe.</p>
-                </article>
-            </section>
+            <article id="article1">
+                <p>Estou a poucas semanas na Trybe, mas sinto que meu aprendizado tem sido tão abrangente quanto meses de estudo. A metodologia de aprendizado ativa tem sido árdua e intensa, tem me deixado estressado e muito cansado, porém com o passar dos dias, me comparando com o Marcelo la dos welcome days, já vejo uma enorme diferença e me sinto muito orgulhoso de fazer parte da Trybe.</p>
+            </article>
+            
             <section id="article2">
                 <aside>
                     <p>O nosso primeiro momento soft skills sobre autoconhecimento foi muito importante pra mim, me fez enxergar gatilhos e caminhos para amenizar problemas que me perseguem desde a minha entrada no mercado de trabalho.</p>
