(7) requisito - link externo

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </ul>
     <footer id="rodape">
         Project Lessons Learned - SD09
+        <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a>
     </footer>
 </body>
 </html>
