Ajustes de textos e estilos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </header>
   <img src="rodrigofarias.jpeg" alt="Foto de Rodrigo Farias" id="minha_foto">
   <aside id="aside">
-    <section>Sou estudante de Trybe desde 09 de Novembro de 2020 e em apenas 15 dias aprendi a utilizar o bash/shell do sistema unix e seus principais comandos, a versionar arquivos com o git e armazenar em repositórios remotos como o github.</section>
+    <div>Olá, meu nome é Rodrigo Farias, tenho 35 anos e moro em Amargosa, Bahia. </div>
+    <section>Seção reservada para escrever sobre a passagem do curso com mais de 100 linhas.</section>
+    <section>Seção reservada para escrever sobre a passagem do curso com mais de 100 linhas.</section>    
   </aside>
   <main id="main">
     <article id="artigo_aprendizado">Sou estudante de Trybe desde 09 de Novembro de 2020 e em apenas 15 dias aprendi a utilizar o bash/shell do sistema unix e seus principais comandos, a versionar arquivos com o git e armazenar em repositórios remotos como o github. Aprendi também a estruturar, tonar acessível, dar sentido e estilizar páginas web utilizando as linguagens de marcação html e estilo css. Estou encantado como a Trybe vem me ajudando a organizar melhor meu tempo, a conhecer pessoas maravilhosas e ter mais empatia. Sim!! Tudo isso em apenas 15 dias!!</article>
@@ -64,7 +66,7 @@
         </tr>
         <tr>
           <td>Diego</td>
-          <td>.</td>
+          <td>Vinícius</td>
           <td>Turma 09</td>
         </tr>
         <tr>
