--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned | Trybe</h1>
     </header>
-
+<div id="corpo">
     <main>
         <section id="sec-foto">
             <figure>
@@ -79,6 +79,8 @@
             </tr>
         </table>
     </footer>
+</div>
+    
 </body>
 
 </html>
