Parte 5 do projeto

--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@
         <li>HTML Semântico</li>
         <li>CSS</li>
         <li>Introdução às Softskills</li>
-        <li>Introdução à inteligência emocional</li>
+        <li>Introdução à Inteligência Emocional</li>
         <li>Companheirismo</li>
       </ol>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript: Lógica de Programação e Algoritmos</li>
+        <li>JavaScript: Objetos e Funções</li>
+        <li>JavaScript: Eventos</li>
+        <li>JavaScript: Web Storage</li>
+        <li>CSS Flexbox</li>
+        <li>Jest</li>
+        <li>React</li>
+        <li>Redux</li>
+        <li>Back-end</li>
+        <li>NodeJS</li>
+      </ul>
   </body>
 </html>
