--- a/index.html
+++ b/index.html
@@ -8,20 +8,29 @@
 <body>
 <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
+    <nav id="nav">
+        <ul>
+          <li><a href="https://smithbernardo.github.io" target="_blank">Minhas Informações</a></li>
+          <li><a href="https://betrybe.com" target="_blank">Sobre a Trybe</a></li>
+          <li><a href="">Contato</a></li>
+        </ul><br><br>
+      </nav>
 </header> 
 <article>
     <section>
         <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
     </section>
     <article>
-    <p>Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a 
+    <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a 
         dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente
          mudamos nosso paradigma quando somos expostos à pressão a muita informação. Meu aprendizado 
          tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu
           dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando 
           tarefas antes impossiveis agora simples. </p>
     </article>
-    <section>
+    
+    <aside id="coluna">
+       <section id="lista1">    
         <h2>Lista das lições já aprendidas</h2>
         <ol id="licoes_aprendidas">
             <li>Fundamentos do Desenvolvimento Web</li>
@@ -36,7 +45,7 @@
             <li>Inspect</li>
         </ol>
         </section>
-        <section>
+        <section id="lista2">
             <h3>Lista das lições que Desejo aprender</h3>
             <ul id="licoes_a_aprender">
                 <li>JavaScript</li>
@@ -51,8 +60,9 @@
                 <li>SQL</li>                
             </ul>
         </section>
+    </aside>
         <section>
-            <p>Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar 
+            <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar 
                 matéria e sempre nao gostei de provas. Na Trybe o aprendizado tem sido através 
                 de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
         </section>
