--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 </head>
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
-<article id="artigo">
-    <h2> Sobre o meu aprendizado na Trybe</h2>
-    <p> Trybe, desde o início do ano, era um sonho de entrar, nunca me imaginei conquistando-o,
-    sempre fui negativa na tentativa de fazer qualquer coisa em meu benefício.
-    Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
-    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas
-    ferramentas como hackerRank, Zoom e
-    melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
-    As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
-    desafios e superando-os com ajuda do time Trybe.</p>
-</article>
 
   <ol id="licoes_aprendidas">
   <li>Git;</li>
@@ -48,6 +37,18 @@
     <li>Ser Fluente no italiano;</li>
     <li>Tocar Bateria;</li>
 </ul>
+<article>
+    <h2> Sobre o meu aprendizado na Trybe</h2>
+    <p> Trybe, desde o início do ano, era um sonho de entrar, nunca me imaginei conquistando-o,
+    sempre fui negativa na tentativa de fazer qualquer coisa em meu benefício.
+    Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
+    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas
+    ferramentas como hackerRank, Zoom e
+    melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
+    As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
+    desafios e superando-os com ajuda do time Trybe.</p>
+</article>
+
 
 <footer id="rodape">Sigam-me no GitHub: <a href="https://github.com/Kamilavrhcp" target="_blank">@Kamilavrhcp</a> </footer>
 </body>
