Conclusão de requisitos obrigatórios

--- a/index.html
+++ b/index.html
@@ -20,39 +20,34 @@
   <div id="page_content">
   <main>
     <div id="main_content">
-    <img src='./assets//Screenshot_20200825-124946_Gallery.jpg' alt="Ederson image" id="minha_foto" width="200px">
+    <img src='./assets/ed.jpg' alt="Ederson image" id="minha_foto" width="200px">
     <div class="article_content">
       <div id="sub_title main">
         <h2 class="sub_title">Sobre mim</h2>
       </div>
-    <article>
-      <p>Olá, me chamo Ederson rodrigo da silva lopes, tenho 19 anos e moro em fortaleza, capital do ceará.
+    <article class="lado-esquerdo">
+        Olá, me chamo Ederson rodrigo da silva lopes, tenho 19 anos e moro em fortaleza, capital do ceará.
         em novembro de 2020 entrei para escola de programação Trybe, onde eu me matriculei no intuito de obter um
         conhecimento mais profissional sobre desenvolvimento de softwares. Desde 2019 tenho um sonho de poder trabalhar
         desenvolvendo softwares, pois naminha visão, é uma área da tecnologia que trabalha tanto o raciocínio quanto a imaginação e
         é este fato que me motiva a querer trabalhar com isso.
-      </p>
     </article>
   </div>
   </div>
   </main>
   <aside>
-    <h2 class="sub_title">Aprendizados</h2>
-    <section>
-      <ul>
-        <li>Comecei a entender sobre linux e Unix</li>
-        <li>Entendi mais sobre como funciona a web por baixo dos panos</li>
-        <li>Aprendi conceitos sobre git</li>
-        <li>Fixei mais conhecimentos sobre git e aprendi sobre github</li>
-        <li>Tive uma breve introdução sobre HTML com apresentação de algumas tags</li>
-        <li>Aprendi mais sobre tags no HTML e tive umaintrodução sobre CSS</li>
-        <li>Fixei muitos comandos e propriedades do Html e css</li>
-        <li>Aprendi sobre os conceitos de HTML semântico</li>
-      </ul>
+    <h2 class="sub_title arct_posit">Aprendizados</h2>
+    <section class="lado-direito">
+        Comecei primeiramente a entender sobre linux e Unix, logo após
+        Entendi mais sobre como funciona a web por baixo dos panos. No outro dia
+        Aprendi conceitos sobre git alem de fixar mais conhecimentos sobre github.
+        Tive uma breve introdução sobre HTML com apresentação de algumas tags além de uma
+        introdução sobre CSS. Após issofFixei muitos comandos e propriedades do Html e css
+        e por utimo aprendi sobre os conceitos de HTML semântico
     </section>
   </aside>
 </div>
-<div id="list_content">
+<div id="list">
   <h2 class="sub_title">Lições</h2>
   <div id="list_content">
   <ol id="licoes_aprendidas">
@@ -80,7 +75,7 @@
     <li>React</li>
     <li>Node</li>
     <li>SQL</li>
-  </ul>
+
 </div>
 </div>
 <footer id="rodape"><H4>Direitos reservados, Ederson</H4></footer>
