--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             </ul>
         </section>
     </main>
+    <footer id="rodape">
+        <p>Desenvolvido por <a href="https://github.com/Diego-Vini" target="__blank">@Diego-Vini</a> <strong>|</strong> todos os direitos reservados.</p>
+    </footer>
 
 </body>
 </html>
