--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Login</li>
-            </ul>
-        </nav>
+    <header>
+        <div id="cabecalho">
+            <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+            <nav>
+                <ul>
+                    <li><a href="https://github.com">Home</a></li>
+                    <li><a href="https://stackoverflow.com">Login</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <article>
             <img id="minha_foto" src="minhaFoto.jpg">
-            <a href="https://marcosalbuquerque.github.io/Portfolio/">Marcos Albuquerque</a>
+            <h1> 
+                <a href="https://marcosalbuquerque.github.io/Portfolio/">Marcos Albuquerque</a>
+            </h1>
             <section>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur odit, reprehenderit nihil dolor dolorem magni tempora molestiae culpa voluptatum voluptatem nemo delectus. Nihil blanditiis quam vitae vero consequatur nulla atque.</p>
             </section>
@@ -52,7 +56,7 @@
         </article>
     </main>
     <footer id="rodape">
-        <a href="http://www.google.com">Google</a>
+        <a href="https://www.google.com">Google</a>
     </footer>
 </body>
 </html>
