--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 	<body>
 		<header id="cabecalho">
       <h1 id="titulo">Lições aprendidas - Trybe</h1>
+      <p>Ivan Rafael - Turma 9</p>
     </header>
     <main id="content">
       <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">
-      <a href="https://github.com/ivanrafael-dev" target="_blank">GitHub</a>
+      <nav id="links">
+        <a href="https://github.com/ivanrafael-dev" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/ivan-rafael" target="_blank">LinkedIn</a>
+        <a href="https://instagram.com/ivandolim">Instagram</a>
+      </nav>
       <section id="section">
         <article id="article">
           <h2>Meu Aprendizado</h2>
