--- a/index.html
+++ b/index.html
@@ -22,38 +22,110 @@
         </nav>
       </section>
     </header>
-    <img
-      id="minha_foto"
-      src="rsz_genadi-imagem.jpg"
-      alt=" homem em uma pista de corrida"
-    /> genadi-reuben
-    <h2>Lições aprendidas</h2>
-    <ol id="licoes_aprendidas">
-      <li>Unix;</li>
-      <li>Git;</li>
-      <li>GitHub;</li>
-      <li>Empatia;</li>
-      <li>HTML;</li>
-      <li>CSS;</li>
-      <li>Slack;</li>
-      <li>Zoom;</li>
-      <li>Inspect;</li>
-      <li>Semantic Html.</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <h3>Lições a serem aprendidas</h3>
-      <li>JavaScript;</li>
-      <li>DOM;</li>
-      <li>Forms;</li>
-      <li>CSS responsive;</li>
-      <li>ES6;</li>
-      <li>HOF;</li>
-      <li>Unit Tests;</li>
-      <li>React;</li>
-      <li>Node;</li>
-      <li>SQL.</li>
-    </ul>
-    <article id="artigo">
+    <main class="principal">
+      <div class="imagem">
+        <img
+          id="minha_foto"
+          src="rsz_genadi-imagem.jpg"
+          alt=" homem em uma pista de corrida"
+        />
+        <p id="meu-nome">Genadí Reuben</p>
+      </div>
+      <h2>Conteúdo do curso</h2>
+      <ol id="licoes_aprendidas">
+        <h3>Lições aprendidas</h3>
+        <li>Unix;</li>
+        <li>Git;</li>
+        <li>GitHub;</li>
+        <li>Empatia;</li>
+        <li>HTML;</li>
+        <li>CSS;</li>
+        <li>Slack;</li>
+        <li>Zoom;</li>
+        <li>Inspect;</li>
+        <li>Semantic Html.</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <h3>Lições a serem aprendidas</h3>
+        <li>JavaScript;</li>
+        <li>DOM;</li>
+        <li>Forms;</li>
+        <li>CSS responsive;</li>
+        <li>ES6;</li>
+        <li>HOF;</li>
+        <li>Unit Tests;</li>
+        <li>React;</li>
+        <li>Node;</li>
+        <li>SQL.</li>
+      </ul>
+      <aside id="conteudo-lateral">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+          tristique nisl vitae erat placerat, eu ultrices erat rhoncus.
+          Suspendisse sed nibh quis nisl varius vulputate a ac libero. Nulla
+          pellentesque vitae nisi sed faucibus. Maecenas velit neque, pretium
+          quis augue id, scelerisque finibus purus. Curabitur eu diam vitae diam
+          commodo vestibulum in sit amet nibh. In lacinia turpis eu risus
+          aliquet, eu eleifend est tempor. Fusce sed erat iaculis, imperdiet
+          massa in, porta ipsum. Curabitur quam purus, ornare sit amet semper
+          et, viverra vel massa. Ut porta eget justo eu ultricies. Suspendisse
+          et fermentum sem. Etiam tempor, sem vitae cursus rutrum, risus nisl
+          auctor nibh, sit amet lobortis orci odio eu nulla. Phasellus lacinia
+          ornare lorem. Proin volutpat enim non lorem bibendum tempus. Maecenas
+          nisl est, dignissim ut tempor ut, ornare eget libero. Nullam finibus
+          elementum magna placerat vestibulum. Integer velit nunc, egestas nec
+          ex vel, volutpat efficitur dolor. Proin ut metus sapien. Donec
+          dignissim dui et ligula maximus, ac facilisis ex facilisis. Nunc
+          aliquet, felis sit amet vestibulum dapibus, elit lacus sagittis nunc,
+          at posuere nulla elit id massa. Ut a dictum ipsum, a condimentum
+          tortor. Integer erat nisl, gravida quis nulla efficitur, varius
+          pretium lorem. Vestibulum sed gravida ipsum. Nunc dictum nulla a
+          sapien volutpat, at suscipit lorem bibendum. Donec ut tortor dui.
+          Pellentesque sodales sapien et nisi consectetur facilisis. Cras
+          laoreet augue eget ante gravida, tristique suscipit magna elementum.
+          Pellentesque dui dolor, bibendum et rutrum quis, molestie at lacus.
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia curae; Nullam sed urna velit. Etiam et commodo odio.
+          Nullam non fringilla velit. Vestibulum ac hendrerit eros, vitae
+          laoreet lorem. Orci varius natoque penatibus et magnis dis parturient
+          montes, nascetur ridiculus mus. Sed varius turpis id felis molestie
+          porta. Vivamus a ultrices nunc, quis malesuada.
+        </p>
+      </aside>
+      <article id="artigo">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+          tristique nisl vitae erat placerat, eu ultrices erat rhoncus.
+          Suspendisse sed nibh quis nisl varius vulputate a ac libero. Nulla
+          pellentesque vitae nisi sed faucibus. Maecenas velit neque, pretium
+          quis augue id, scelerisque finibus purus. Curabitur eu diam vitae diam
+          commodo vestibulum in sit amet nibh. In lacinia turpis eu risus
+          aliquet, eu eleifend est tempor. Fusce sed erat iaculis, imperdiet
+          massa in, porta ipsum. Curabitur quam purus, ornare sit amet semper
+          et, viverra vel massa. Ut porta eget justo eu ultricies. Suspendisse
+          et fermentum sem. Etiam tempor, sem vitae cursus rutrum, risus nisl
+          auctor nibh, sit amet lobortis orci odio eu nulla. Phasellus lacinia
+          ornare lorem. Proin volutpat enim non lorem bibendum tempus. Maecenas
+          nisl est, dignissim ut tempor ut, ornare eget libero. Nullam finibus
+          elementum magna placerat vestibulum. Integer velit nunc, egestas nec
+          ex vel, volutpat efficitur dolor. Proin ut metus sapien. Donec
+          dignissim dui et ligula maximus, ac facilisis ex facilisis. Nunc
+          aliquet, felis sit amet vestibulum dapibus, elit lacus sagittis nunc,
+          at posuere nulla elit id massa. Ut a dictum ipsum, a condimentum
+          tortor. Integer erat nisl, gravida quis nulla efficitur, varius
+          pretium lorem. Vestibulum sed gravida ipsum. Nunc dictum nulla a
+          sapien volutpat, at suscipit lorem bibendum. Donec ut tortor dui.
+          Pellentesque sodales sapien et nisi consectetur facilisis. Cras
+          laoreet augue eget ante gravida, tristique suscipit magna elementum.
+          Pellentesque dui dolor, bibendum et rutrum quis, molestie at lacus.
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia curae; Nullam sed urna velit. Etiam et commodo odio.
+          Nullam non fringilla velit. Vestibulum ac hendrerit eros, vitae
+          laoreet lorem. Orci varius natoque penatibus et magnis dis parturient
+          montes, nascetur ridiculus mus. Sed varius turpis id felis molestie
+          porta. Vivamus a ultrices nunc, quis malesuada erat.
+        </p>
+      </article>
       <section>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
@@ -88,71 +160,7 @@
           porta. Vivamus a ultrices nunc, quis malesuada erat.
         </p>
       </section>
-      <section>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-          tristique nisl vitae erat placerat, eu ultrices erat rhoncus.
-          Suspendisse sed nibh quis nisl varius vulputate a ac libero. Nulla
-          pellentesque vitae nisi sed faucibus. Maecenas velit neque, pretium
-          quis augue id, scelerisque finibus purus. Curabitur eu diam vitae diam
-          commodo vestibulum in sit amet nibh. In lacinia turpis eu risus
-          aliquet, eu eleifend est tempor. Fusce sed erat iaculis, imperdiet
-          massa in, porta ipsum. Curabitur quam purus, ornare sit amet semper
-          et, viverra vel massa. Ut porta eget justo eu ultricies. Suspendisse
-          et fermentum sem. Etiam tempor, sem vitae cursus rutrum, risus nisl
-          auctor nibh, sit amet lobortis orci odio eu nulla. Phasellus lacinia
-          ornare lorem. Proin volutpat enim non lorem bibendum tempus. Maecenas
-          nisl est, dignissim ut tempor ut, ornare eget libero. Nullam finibus
-          elementum magna placerat vestibulum. Integer velit nunc, egestas nec
-          ex vel, volutpat efficitur dolor. Proin ut metus sapien. Donec
-          dignissim dui et ligula maximus, ac facilisis ex facilisis. Nunc
-          aliquet, felis sit amet vestibulum dapibus, elit lacus sagittis nunc,
-          at posuere nulla elit id massa. Ut a dictum ipsum, a condimentum
-          tortor. Integer erat nisl, gravida quis nulla efficitur, varius
-          pretium lorem. Vestibulum sed gravida ipsum. Nunc dictum nulla a
-          sapien volutpat, at suscipit lorem bibendum. Donec ut tortor dui.
-          Pellentesque sodales sapien et nisi consectetur facilisis. Cras
-          laoreet augue eget ante gravida, tristique suscipit magna elementum.
-          Pellentesque dui dolor, bibendum et rutrum quis, molestie at lacus.
-          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-          posuere cubilia curae; Nullam sed urna velit. Etiam et commodo odio.
-          Nullam non fringilla velit. Vestibulum ac hendrerit eros, vitae
-          laoreet lorem. Orci varius natoque penatibus et magnis dis parturient
-          montes, nascetur ridiculus mus. Sed varius turpis id felis molestie
-          porta. Vivamus a ultrices nunc, quis malesuada erat.
-        </p>
-      </section>
-    </article>
-    <aside><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-      tristique nisl vitae erat placerat, eu ultrices erat rhoncus.
-      Suspendisse sed nibh quis nisl varius vulputate a ac libero. Nulla
-      pellentesque vitae nisi sed faucibus. Maecenas velit neque, pretium
-      quis augue id, scelerisque finibus purus. Curabitur eu diam vitae diam
-      commodo vestibulum in sit amet nibh. In lacinia turpis eu risus
-      aliquet, eu eleifend est tempor. Fusce sed erat iaculis, imperdiet
-      massa in, porta ipsum. Curabitur quam purus, ornare sit amet semper
-      et, viverra vel massa. Ut porta eget justo eu ultricies. Suspendisse
-      et fermentum sem. Etiam tempor, sem vitae cursus rutrum, risus nisl
-      auctor nibh, sit amet lobortis orci odio eu nulla. Phasellus lacinia
-      ornare lorem. Proin volutpat enim non lorem bibendum tempus. Maecenas
-      nisl est, dignissim ut tempor ut, ornare eget libero. Nullam finibus
-      elementum magna placerat vestibulum. Integer velit nunc, egestas nec
-      ex vel, volutpat efficitur dolor. Proin ut metus sapien. Donec
-      dignissim dui et ligula maximus, ac facilisis ex facilisis. Nunc
-      aliquet, felis sit amet vestibulum dapibus, elit lacus sagittis nunc,
-      at posuere nulla elit id massa. Ut a dictum ipsum, a condimentum
-      tortor. Integer erat nisl, gravida quis nulla efficitur, varius
-      pretium lorem. Vestibulum sed gravida ipsum. Nunc dictum nulla a
-      sapien volutpat, at suscipit lorem bibendum. Donec ut tortor dui.
-      Pellentesque sodales sapien et nisi consectetur facilisis. Cras
-      laoreet augue eget ante gravida, tristique suscipit magna elementum.
-      Pellentesque dui dolor, bibendum et rutrum quis, molestie at lacus.
-      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-      posuere cubilia curae; Nullam sed urna velit. Etiam et commodo odio.
-      Nullam non fringilla velit. Vestibulum ac hendrerit eros, vitae
-      laoreet lorem. Orci varius natoque penatibus et magnis dis parturient
-      montes, nascetur ridiculus mus. Sed varius turpis id felis molestie
-      porta. Vivamus a ultrices nunc, quis malesuada.</p></aside>
+    </main>
     <footer id="rodape">Todos os direitos reservados, Genadí.</footer>
   </body>
 </html>
