atualizaçao de font size, font family

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/d4a654d60c.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Texturina:wght@100;200&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned</h1>
+        <h3>por Michael M.</h3>
     </header>
     <main>
         <div id="foto">
             <img src="assets/rsz_1design_sem_nome.png" alt="foto de michael" id="minha_foto">
         </div>
-        <div container-container>
+        <div class="container-container">
             <div id="container-lista-licoes_aprendidas">
                 <h2>Lições aprendidas até agora:</h2>
                 <ol id="licoes_aprendidas">
@@ -52,7 +55,7 @@
                 <h3>Nossa rotina:</h3>
                 <p>Aqui na TRYBE, o foco é cada vez aprender mais, sendo assim todos os dias temos assuntos diferenciados no esquenta.</p>
                 <p> todo o conteúdo no trybe/course, e depois ainda vamos para uma aula ao vivo sem igual com o especialista Gabriel Oliva. A aula do Oliva é simplesmente sem igual, uma aula descontraída dinâmica e cheia de interação com os alunos.</p> 
-        </section>
+             </section>
         </div>
         <div id="aside">
             <aside class="aside-lateral">
