--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <header id="cabecalho">
       <h1 id="titulo">Lições aprendidas</h1>
       <h2>Lucas Neves - Turma 09</h2>
+      <nav>
+        <ul>
+          <li><a href=#top>Início</a></li>
+          <li><a href=#licoes_aprendidas>Habilidades</a></li>
+          <li><a href=#meu_aprendizado>Experiências</a></li>
+          <li><a href=#contato>Contato</a></li>
+        </ul>
+    </nav>
   </header>
 
   <img id="minha_foto" src="rsz_minha-foto.jpg" alt="Aqui podemos ver uma foto de Lucas Neves de Oliveira em sua viagem a Gramado">
@@ -49,24 +57,20 @@
   <article id="meu_aprendizado">
     <section>
       <h3>Experiências</h3>
-      <p>
-        Este é o primeiro projeto que faço, como aluno da Trybe e estou muito feliz com o resultado, até agora. 
+      <p>Este é o primeiro projeto que faço, como aluno da Trybe e estou muito feliz com o resultado, até agora.
         Para realização dessa atividade, foi necessário aprender conceitos básicos de Unix & Bash, Internet, Git & GitHub, HTML Semântico e CSS.
         Exercendo o método de ensino proposto pela Trybe, pude aprimorar, não apenas minhas habilidades técnicas, mas também posso afirmar: estou <strong>aprendendo</strong> a aprender.
-        Sinto que evoluí <strong>bastante</strong> desde o meu primeiro dia e estou mais do que preparado para seguir adiante!
-      </p>
+        Sinto que evoluí <strong>bastante</strong> desde o meu primeiro dia e estou mais do que preparado para seguir adiante!</p>
     </section>
   </article>
 
   <aside id="passagem_de_aprendizado">
     <section>
       <h3>A estrada até agora</h3>
-      <p>
-        Parece que o curso começou ontem e o primeiro projeto já está <strong>PRONTO!</strong> 
+      <p>Parece que o curso começou ontem e o primeiro projeto já está <strong>PRONTO!</strong> 
         Não foi fácil, deixamos alguns pratos caírem, mas nós conseguimos. 
-        Com novas <em>soft skills</em>: <strong>empatia</strong> e <strong>inteligência emocional</strong>, descobrimos que juntos somos mais fortes!
-        É uma honra fazer parte dessa equipe.<strong> AVANTE TURMA 09!</strong> 
-      </p>
+        Com novas <em>soft skills</em>: <strong>empatia</strong> e <strong>inteligência emocional</strong>, descobrimos que juntos somos mais fortes! 
+        É uma honra fazer parte dessa equipe.<strong> AVANTE TURMA 09!</strong></p>
     </section>
   </aside>
 
