--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <li>Ser Fluente no italiano;</li>
     <li>Tocar Bateria;</li>
 </ul>
-<article id="artigo">
+<article>
     <h2> Sobre o meu aprendizado na Trybe</h2>
     <p> Trybe, desde o início do ano, era um sonho de entrar, nunca me imaginei conquistando-o,
     sempre fui negativa na tentativa de fazer qualquer coisa em meu benefício.
