Depois do apocalipse

--- a/index.html
+++ b/index.html
@@ -8,34 +8,30 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
-    <!--                                           --- HEADER ---                                                     -->
     <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas | Trybe</h1>
-        <nav class="menu">
-            <a target="_blank" href="#cabecalho">Home</a>
-            <a target="_blank" href="https://google.com">Google</a>
-        </nav>
-    </header>
-    <!--                                           --- MAIN ---                                                     -->
-    <main>
-        <div class="img-wrapper">
-            <img id="minha_foto" src="" width="230px" alt="Uma foto de Pedro Toselli">
+        <div class="head-container">
+            <h1 id="titulo">Lições aprendidas | Trybe</h1>
+            <nav class="menu">
+                <a target="_blank" href="#header">Home</a>
+                <a target="_blank" href="https://google.com">Google</a>
+            </nav>
         </div>
-            <div class="main-name">
-                <h3>Pedro Toselli <br> Estudante de desenvolvimento web | Trybe</h3>
+    </header>
+    <main>
+        <div class="container">
+            <div class="img-wrapper">
+                <img id="minha_foto" src="imagens/toselli.jpg" width="230px" alt="Uma foto de Pedro Toselli">
             </div>
-            <div class="main-description">
-                <p>Sou estudante de desenvolvimento web na Trybe, gosto muito da área de desenvolvimento e amo "quebrar a cabeça" com novos desafios. <br>Busco sempre me desenvolver tanto como pessoa quanto como profissional, levando em consideração minhas hard-skills e soft-skills.</p>
-            </div>
+                <div class="main-name">
+                    <h3>Pedro Toselli <br> Estudante de desenvolvimento web | Trybe</h3>
+                </div>
+                <div class="main-description">
+                    <p>Sou estudante de desenvolvimento web na Trybe, gosto muito da área de desenvolvimento e amo "quebrar a cabeça" com novos desafios. <br>Busco sempre me desenvolver tanto como pessoa quanto como profissional, levando em consideração minhas hard-skills e soft-skills.</p>
+                </div>
+        </div>
     </main>
-    <!--                                           --- ARTICLE---                                                     -->
-    <article>
-        <section>
-            <aside>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio est velit, quasi id harum.</p>
-            </aside>
-        </section>
-        <section class="main-list">
+    <section>
+        <div class="sec-container">
             <ol id="licoes_aprendidas">
                 <li>Inteligência emocional</li>
                 <li>Soft-skills</li>
@@ -60,9 +56,16 @@
                 <li>web design</li>
                 <li>como fazer miojo</li>
             </ul>
-        </section>
-    </article>
-    <!--                                           --- FOOTER ---                                                     -->
+        </div>
+        <aside>
+            <table>
+                <li>a</li>
+                <li>b</li>
+                <li>c</li>
+            </table>
+        </aside>
+    </section>
+
     <footer id="rodape">
         <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
         <a target="_blank" href="https://linkedin.com/in/pedrotoselli"><i class="fab fa-linkedin"></i></a>
