--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
   </main>
   <aside>
     <h2 class="sub_title arct_posit">Aprendizados</h2>
-    <section class="lado-direito">
-        Comecei primeiramente a entender sobre linux e Unix, logo após
-        Entendi mais sobre como funciona a web por baixo dos panos. No outro dia
-        Aprendi conceitos sobre git alem de fixar mais conhecimentos sobre github.
-        Tive uma breve introdução sobre HTML com apresentação de algumas tags além de uma
-        introdução sobre CSS. Após issofFixei muitos comandos e propriedades do Html e css
-        e por utimo aprendi sobre os conceitos de HTML semântico
+    <section class="lado-direito">Comecei primeiramente a entender sobre linux e Unix, logo após
+Entendi mais sobre como funciona a web por baixo dos panos. No outro dia
+Aprendi conceitos sobre git alem de github. Tive tambem uma breve introdução sobre HTML com apresentação de algumas tags além de uma
+introdução sobre CSS. Após isso e por utimo aprendi sobre os conceitos de HTML semântico
     </section>
   </aside>
 </div>
