adiciona foto ao html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="style.css">      
 </head>
 <body>
-    <!--header id="cabecalho">Lições Aprendidas - Trybe!</header>-->
+    <header id="cabecalho">Lições Aprendidas - Trybe!</header>
+    <img src="lenilsom.jpg" alt="foto de Lenilsom" width="300px">    
     <ol>
         <li>Fundamentos: Unix, Shell e Kernel;</li>
         <li>Terminal: Trabalhando com diretórios e arquivos;</li>
