--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#minha_foto">Home</a></li>
-    </ul>
-  </nav>
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+    <nav>
+      <ul>
+        <li><a href="#minha_foto">Home</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <section>
@@ -72,7 +72,7 @@
     </section>
   </main>
   <footer id="rodape">
-    <a target="_blank" href="https://github.com/danimuller20">GitHub</a>
+    <a class="link" target="_blank" href="https://github.com/danimuller20">GitHub</a>
   </footer>
 </body>
 </html>
