--- a/index.html
+++ b/index.html
@@ -39,12 +39,8 @@
 </ul>
 <article id="artigo">
     <h2> Sobre o meu aprendizado na Trybe</h2>
-    <p> Trybe, desde o início do ano, era um sonho de entrar, nunca me imaginei conquistando-o,
-    sempre fui negativa na tentativa de fazer qualquer coisa em meu benefício.
-    Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
-    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas
-    ferramentas como hackerRank, Zoom e
-    melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
+    <p> Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
+    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank, Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
     As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
     desafios e superando-os com ajuda do time Trybe.</p>
 </article>
