--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Project Lessons Learned</h1>
+        <h1 id="titulo">Lições Aprendidas - Turma 09</h1>
         <nav>
             <ul>
                 <li><a href="#">Página Inicial</a></li>
@@ -47,6 +47,19 @@
             <li>Node</li>
             <li>SQL</li>
         </ul>
+        <table>
+            <tr>
+                <th colspan="2">Conteúdo Trybe</th>
+            </tr>
+            <tr>
+                <td>Bloco 1: Unix, Bash e Shell Script</td>
+                <td>Bloco 2: Git, GitHub e Internet</td>
+            </tr>
+            <tr>
+                <td>Bloco 3: Introdução à HTML e CSS</td>
+                <td>Bloco 4: Introdução à JavaScript e Lógica de Programação</td>
+            </tr>
+        </table>
         <article class="lado-esquerdo">
             <h2>Título Artigo</h2>
             <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML, é possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e conhecer melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
@@ -54,20 +67,9 @@
         <aside class="lado-direito">
             <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades que enfrentaremos num dia-a-dia de trabalho.</p>
         </aside>
-        <table>
-            <tr>
-                <th colspan="4">Conteúdo Trybe</th>
-            </tr>
-            <tr>
-                <td>Bloco 1: Unix, Bash e Shell Script</td>
-                <td>Bloco 2: Git, GitHub e Internet</td>
-                <td>Bloco 3: Introdução à HTML e CSS</td>
-                <td>Bloco 4: Introdução à JavaScript e Lógica de Programação</td>
-            </tr>
-        </table>
     </main>
     <footer id="rodape">
-        Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a>
+        <p>Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a></p>
     </footer>
 </body>
 </html>
