--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
         <h1 id="titulo">Lições aprendidas na Trybe</h1>
     </header>
 
-<nav>
+<nav> 
+    <ul>
+        <li> <a href="#minha foto">Página Inicial</a></li>
+        <li> <a href="#licoes_aprendidas">Sobre o aprendizado</a></li>
+        <li> <a href="#rodape">Contato</a></li>
+    </ul>
+</nav>
+
+<main>
     <section>
         <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado" width=20%>
         <h2><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank">Ana Luiza Machado Salgado</a></h2>
     </section>
-</nav>
 
-<main>
     <section>
         <ol id="licoes_aprendidas">
             <li>Unix & Bash</li>
@@ -34,9 +40,7 @@
             <li>Inspect</li>
             <li>Semantic HTML</li>
         </ol>
-    </section>
 
-    <section>
         <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>DOM</li>
