update header and image border

--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
             </h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Arquivos</a></li>
+                    <button><li><a href="#">Home</a></li></button>
+                    <button><li><a href="#">Arquivos</a></li></button>
                 </ul>
             </nav>
         </header>
         <main>
             <section>
-                <div id="gradient-border">
                     <img id="minha_foto" src="brenno-calado.jpg" alt="brenno-calado.jpg">
-                </div>
                     <ol id="licoes_aprendidas">
                     <li>Ligou o Ubuntu? Dê um <code>sudo apt-get upgrade</code>!</li>
                     <li>Já deu o seu <code>commit -m</code> hoje? Opa, lá vem bomba...</li>
