Adicionando um elemento nav no header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned | Trybe</h1>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="mailto:matheus.martino97@gmail.com">Email</a>
+                </li>
+                <li>
+                    <a href="tel:015991309506">Telefone</a>
+                </li>
+            </ul>
+        </nav>
     </header>
+
     <div id="corpo">
         <main>
             <section id="sec-foto">
