add list headings and move aside

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <main>
             <section>
                     <img id="minha_foto" src="brenno-calado.jpg" alt="brenno-calado.jpg">
+                    <h3>Lições aprendidas</h3>
                     <ol id="licoes_aprendidas">
                     <li>Ligou o Ubuntu? Dê um <code>sudo apt-get upgrade</code>!</li>
                     <li>Já deu o seu <code>commit -m</code> hoje? Opa, lá vem bomba...</li>
@@ -33,6 +34,7 @@
                     <li>Se o CSS te deixar perdido, o <code>display: flex</code> está ai para te ajudar</li>
                     <li>Tá perdido? Não guarde as dúvidas para você!</li>
                 </ol>
+                <h3>Lições a aprender</h3>
                 <ul id="licoes_a_aprender">
                     <li>soft-skills</li>
                     <li>Linguagem de Programação</li>
@@ -50,10 +52,10 @@
                 <article>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempore excepturi, rerum autem temporibus labore obcaecati iste, similique maiores accusamus, corrupti dolore aut eos quod eius officia tenetur! A, placeat?</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sint distinctio quae molestiae ipsum dignissimos nemo nihil quidem, ducimus voluptates natus laudantium soluta commodi veritatis libero amet necessitatibus id iusto.</p>
-                    <aside>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit quam libero quasi voluptatibus cupiditate eligendi quibusdam harum! Error eveniet perferendis et cumque aliquid facere necessitatibus nisi fuga ad, quaerat nam.
-                    </aside>
                 </article>
+                <aside>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit quam libero quasi voluptatibus cupiditate eligendi quibusdam harum! Error eveniet perferendis et cumque aliquid facere necessitatibus nisi fuga ad, quaerat nam.
+                </aside>
             </section>
             <section>
                 <table>
