Fix character number at article and section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#licoes_a_aprender">Lições a aprender.</a><br>
             </nav>
             <h3>A Trybe e seu espírito de colaboração</h3>
-            <section class="side-article"><em>"A Trybe se preocupa muito em formar pessoas com boas Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário. Trabalhando em equipe tudo fica mais fácil!"</em>
+            <section class="side-article"><em>"A Trybe se preocupa muito em formar pessoas com boas Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário."</em>
             </section>
         </aside>
         <div id="wrap">
@@ -50,7 +50,7 @@
                 </ul>
                 <article>
                     <h3>Meu aprendizado na Trybe</h3>
-                    <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Para além disso, também iniciei os estudos de SofSkills com a Trybe, aprendi muito sobre inteligência emocional e mal posso esperar para aprender e evoluir cada dia mais na carreira de Desenvolvimento de Softwares. Você pode conferir mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
+                    <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Também iniciei os estudos de Soft Skills com a Trybe, aprendi muito sobre inteligência emocional e mal posso esperar para aprender e evoluir cada dia mais na carreira de Desenvolvimento de Softwares. Você pode conferir mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
                 </article>
             </main>
         </div>
