requisitos 7 inserindo link externo

--- a/index.html
+++ b/index.html
@@ -9,38 +9,43 @@
 <body>
   <header id="cabecalho">
       <h1 id="titulo">Perycles F.</h1>
-      <img id="minha_foto" src="./img1.jpg" alt="">
   </header>
-  <main>
+  <section>
+    <img id="minha_foto" src="./img1.jpg" alt="">
+  </section>
+  <main id="content">
     <section>
-      <li id="licoes_aprendidas">
-        <p>Unix</p>
-        <p>Bash</p>
-        <p>Git</p>
-        <p>GitHub</p>
-        <p>Html</p>
-        <p>Css</p>
-        <p>Internet</p>
-        <p>Semantica Html</p>
-        <p>Boas praticas</p>
-        <p>Soft Skill</p>
-      </li>
+      <h3>Licoes aprendidas:</h3>
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Html</li>
+        <li>Css</li>
+        <li>Internet</li>
+        <li>Semantica Html</li>
+        <li>Boas praticas</li>
+        <li>Soft Skill</li>
+      </ol>
+      <h3>Licoes a aprender:</h3>
       <ul id="licoes_a_aprender">
-        <p>JavaScrit</p>
-        <p>FlexBoxCss</p>
-        <p>React</p>
-        <p>RTL</p>
-        <p>Metodologias Ageis</p>
-        <p>MongoDB</p>
-        <p>NodeJs</p>
-        <p>Arquiterura de Software</p>
-        <p>Python</p>
-        <p>Estrutura de Dados</p>
+        <li>JavaScrit</li>
+        <li>FlexBoxCss</li>
+        <li>React</li>
+        <li>RTL</li>
+        <li>Metodologias Ageis</li>
+        <li>MongoDB</li>
+        <li>NodeJs</li>
+        <li>Arquiterura de Software</li>
+        <li>Python</li>
+        <li>Estrutura de Dados</li>
       </ul>
+      <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/" target="_blank">Linkedin</a>
     </section>
   </main>
   <footer id="rodape">
-
+    <p><strong>Development by for Perycles R. Floriano.</strong> </p>
   </footer>
 </body>
 </html>
