ajuste nomenclatura foto

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   </head>
   <body>
         <header id="cabecalho">
-                <h1 id="titulo" class=center>Felipe Shcolnik</h1>
+                <h1 id="titulo" class="center">Felipe Shcolnik</h1>
         </header>
         <nav>
           <section id="main">
-            <img id="minha foto" src="perfil_felipe_shcolnik.jpg" alt="foto_Felipe_Shcolnik" class="center">
+            <img id="minha_foto" src="perfil_felipe_shcolnik.jpg" alt="foto_Felipe_Shcolnik" size="200px">
+            
             <section id="listas">
               <h4>Lições aprendidas</h4>
               <ol id="lições_aprendidas">
@@ -41,6 +42,7 @@
               </ul>
               
             </section>
+
             <article>
               <h4>Processo de aprendizado na <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao_2&utm_content=anuncio01&gclid=EAIaIQobChMIkv-L1Ymc7QIVUweRCh2ItQcGEAAYASAAEgKLUPD_BwE" target="blank">Trybe</a></h4>
               <p>Os desafios comecaram logo que tive que instalar o Linux na minha máquina. Ainda faltava uma semana para o inicio do curso, porém nao havia ninguem para me ajudar até entao. Nao dava tempo para se lamentar, entao entrei de cabeca na missao.</p>
