Fix sction characters number - def

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#licoes_a_aprender">Lições a aprender.</a><br>
             </nav>
             <h3>A Trybe e seu espírito de colaboração</h3>
-            <section class="side-article"><em>"A Trybe se preocupa muito em formar pessoas com boas Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário."</em>
+            <section class="side-article"><em>"A Trybe se preocupa com as Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário."</em>
             </section>
         </aside>
         <div id="wrap">
