--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <head id="cabeçalho">
-    <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
-</head>
+  <head id="cabecalho"><h1 id="titulo">Lições Aprendidas - Trybe!</h1></head>
+
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
 
   <ol id="licoes_aprendidas">
