--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lições Aprendidas!</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header id="cabecalho">
-         <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
-    </header>   
-</body>
+      <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
+    </header>
+  </body>
 </html>
