--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<header><h1> Projeto 1 - Lições aprendidas</h1>
+    <nav>
+        
+    </nav>
+</header>
 <body>
-    
+    <article>
+        iurhfdnjkasdkj
+    </article>
+
+
+
+    <footer id ="rodape">
+
+    </footer>
 </body>
 </html>
