Alterações de estilo e cumprimento de requisitos

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <section id="apresentacao">
       <img id="minha_foto" src="fernanda.jpeg" alt="Foto de Fernanda Cajueiro">
       <h3 id="nome">Fernanda Cajueiro Machado</h3>
-      <p><a href="https://www.linkedin.com/in/fernandacajueiro/" target="_blank">LinkedIn</a> | <a href="https://github.com/fernandacajueiro" target="_blank">GitHub</a></p>
+      <p id="links"><a href="https://www.linkedin.com/in/fernandacajueiro/" target="_blank">LinkedIn</a> | <a href="https://github.com/fernandacajueiro" target="_blank">GitHub</a></p>
     </section>
 
-    <section>
+    <section id="aprendizados">
       <h2 id="licoes">Lições</h2>
         <ol id="licoes_aprendidas">
           <li>Unix</li>
@@ -47,8 +47,13 @@
           <li>Soft skills</li>
         </ul>
     </section>
-    <article>
-      <p>Há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
+
+    <article id="artigo">
+      <p>Já há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
+
+      <aside id="aside">
+        <p>Neste projeto, foi solicitado que um site fosse criado, contendo aplicações de todos os conteúdos aprendidos desde o início do curso, nos últimos três blocos (Unix, Bash e Shell Script; Git, GitHub e Internet; Introdução a HTML e CSS).</p>
+      </aside>
     </article>
 
     <footer id="rodape">
