Requisito 8. Artigo sobre meu aprendizado.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
 </head>
 <body>
     <header id="cabecalho">
-
-        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+        <div>
+            <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+        </div>
     </header>
 
     <main>
         <img src="minha_foto.png" id="minha_foto">
 
         <p>Olá! Tudo bem? Meu nome é Jhonatan, sou aluno da <a href="https://www.betrybe.com/">Trybe</a></p>
+
+        <article>
+            <p>As aulas da turma 9 da Trybe começaram na segunda semana de novembro de 2020. Em apenas duas semanas já foi possível aprender muita coisa. Durante as duas primeiras semanas tivemos uma imersão na cultura da Trybe e no que seria a base do conhecimento que iríamos desenvolver nos próximos meses.</p>
+            <p>Em apenas 15 dias foi possível entender e executar comandos via terminal, entender como a internet funciona, além das estruturas de página tendo bastante mão na massa principalmente para criar nossa primeira página HTML.</p>
+        </article>
 
         <ol id="licoes_aprendidas">
             <li>Unix</li>
@@ -45,7 +51,7 @@
 
         <footer id="rodape">
             <p>Site created by Jhonatan Arguello</p>
-    
+
         </footer>
     </main>
 
