--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </ul>
                 <article>
                     <h3>Meu aprendizado na Trybe</h3>
-                    <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Também iniciei os estudos de Soft Skills com a Trybe, aprendi muito sobre inteligência emocional e mal posso esperar para aprender e evoluir cada dia mais na carreira de Desenvolvimento de Softwares. Você pode conferir mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
+                    <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Mal posso esperar para aprender e evoluir mais na carreira de Desenvolvimento de Softwares. Confira mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
                 </article>
             </main>
         </div>
