--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="aprendizados">
       <h2 id="licoes">Lições</h2>
-        <ol id="licoes_aprendidas">
+        <ol class="lado-esquerdo" id="licoes_aprendidas">
           <li>Unix</li>
           <li>Bash</li>
           <li>Shell</li>
@@ -34,7 +34,7 @@
           <li>CSS</li>
           <li>HTML Semântico</li>
         </ol>
-        <ul id="licoes_a_aprender">
+        <ul class="lado-direito" id="licoes_a_aprender">
           <li>JavaScript</li>
           <li>React</li>
           <li>Node.js</li>
@@ -49,9 +49,9 @@
     </section>
 
     <article id="artigo">
-      <p>Já há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
+      <p class="lado-esquerdo">Já há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
 
-      <aside id="aside">
+      <aside class="lado-direito" id="aside">
         <p>Neste projeto, foi solicitado que um site fosse criado, contendo aplicações de todos os conteúdos aprendidos desde o início do curso, nos últimos três blocos (Unix, Bash e Shell Script; Git, GitHub e Internet; Introdução a HTML e CSS).</p>
       </aside>
     </article>
