--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav id="menu">
             <ul>
                 <li><a href="#pagina-principal">Home</a></li>
-                <li><a href="#rodape">Sobre</a></li>
+                <li><a href="#rodape">Aprendizado</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +26,7 @@
         <div id="linkedin-icone">
             <a  href="https://www.linkedin.com/in/felipe-silva-rocha/" target="_blank"><img class="icone" src="linkedin.png" alt="Logo Linkedin"><h3>LINKEDIN</h3></a>                
         </div>
-        <section id="listas">
+        <article id="listas">
             <h2>Lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
@@ -52,11 +52,12 @@
                 <li>Python</li>
                 <li>Unit Tests</li>
             </ul>
-        </section>
+        </article>
         <article id="lado-esquerdo">
             <section>
                 <h2>Meu Aprendizado</h2>
-                <p>No dia 9 de novembro iniciei minha jornada na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado. <br>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>               
+                <p>No dia 9 de novembro iniciei minha jornada na Trybe, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado. 
+                <p>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>               
             </section>
         </article>
         <aside id="lado-direito">
