Requisito 9. Criando uma seçao com uma passagem sobre meu aprendizado

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <p>Em apenas 15 dias foi possível entender e executar comandos via terminal, entender como a internet funciona, além das estruturas de página tendo bastante mão na massa principalmente para criar nossa primeira página HTML.</p>
         </article>
 
+        <section>
+            <aside>
+                <p>Estudar na Trybe não é fácil, mas é muito recompensador. Me lembra muito quando minha mãe vinha com o tal do mertiolate rs.</p>
+            </aside> 
+        </section>
+
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
