--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <head id="cabecalho"><h1 id="titulo">Lições Aprendidas - Trybe!</h1></head>
+  <head id="cabecalho">
+      <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+    </head>
 
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
 
@@ -42,6 +44,11 @@
     minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank, Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
     As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
     desafios e superando-os com ajuda do time Trybe.</p>
+    
+    <aside>
+        O que mais me marcou como aprendizado são as softskils, as aulas ao vivo e os plantões, pois assim
+        não ficamos com dúvidas.
+    </aside>
 </article>
 
 
