--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
                 </div>
             </section>
 
-            <article>
+            <article class="lado-esquerdo">
                 <p>
                     A formação Trybe é 100% online e conta com aulas ao vivo, onde você com sua turma diariamente. Você pode fazer toda sua de qualquer local, desde que tenha disponibilidade de a sexta, de 14h às 20h, horário de Brasília, e conquiste a no processo seletivo da Trybe. Duração aproximada de 12 com carga horária de 1.500 horas. Na Trybe você vai adquirir o técnico e as soft skills necessárias para construir uma de sucesso em web e conecte se com o de trabalho.
                 </p>
             </article>
-            <aside>
+
+            <aside class="lado-direito">
                 <p>
                     Estudo desenvolvimento de software na Trybe, uma escola que estimula alunos a trabalharem em equipe, simulando situações reais de em um time de desenvolvimento.
                 </p>
